--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       ENABLE_ROLLING_LOGS: "TRUE"
       MAX_MEMORY: "4G"
       VERSION: "1.20.1"
+      ENABLE_COMMAND_BLOCK: "TRUE"
     tty: true
     stdin_open: true
     restart: unless-stopped
